--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 html, body {
     width: 100%;
     Height: 100%;
+    background-color: whitesmoke;
 }
 
 main {
@@ -16,29 +17,43 @@ main {
 
 .title {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 2.5rem;
+    font-size: 2.75rem;
     text-align: center;
     color: darkred;
+}
+
+.hamburger {
+    float: right;
+    width: 3.25rem;
+    background-color: white;
+    border-radius: 8px;
 }
 
 .search {
     border: .5px solid lightgray;
     margin-top: 10px;
     margin-bottom: 20px;
-    padding: .5rem;
+    padding: .75rem;
     color: gray;
+    background-color: white;
     font-size: 2rem;
-    width: 1000px;
+    width: 1200px;
+}
+
+.huh {
+    width: 2rem;
+    float: right
 }
 
 .content {
     display: flex;
     flex-direction: column;
-    background-color: salmon;
+    background-color: rgb(243, 102, 86);
     color: white;
-    width: 90%;
+    width: 97%;
     border-radius: 10px;
-    padding: 1rem;
+    padding: .75rem;
+    font-size: 1.25rem;
 }
 
 h2 {
@@ -64,7 +79,7 @@ nav {
     height: 100%;
     justify-content: space-around;
     align-items: flex-end;
-    padding-top: 200px;
+    padding-top: 150px;
 }
 
 .green {
@@ -79,4 +94,15 @@ nav {
 .email {
     color: gray;
     font-size: 1.25rem;
+}
+
+.dice {
+    box-sizing: initial;
+    width: 1.5rem;
+    float: right;
+    background-color: darkred;
+    border-radius: 8px;
+    padding: 15px;
+    position: relative;
+    bottom: 20px;
 }
